fixed right side white space issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,8 +5,13 @@ font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [
 
 body {
     font-family: 'Raleway', sans-serif !important;
-    overflow-x: hidden !important;
+    padding-left: 0 !important;
+    /*overflow-x: hidden !important;*/
     /*padding-top: 50px; /*Remove to make showcase picture align with bottom of page*/
+}
+
+.wrapper {
+    overflow-x: hidden;
 }
 
 h5 {
@@ -399,4 +404,11 @@ label {
     background-repeat: no-repeat;
     background-size: cover;
     height: 30vh;
+}
+
+.remove-padding {
+    padding-left: 0 !important;
+    padding-right: 0  !important;
+    margin-left: 0  !important;
+    margin-right: 0  !important;
 }
